--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
             }
         }
     </style>
+    <script type="text/javascript">
+var infolinks_pid = 3426000;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
     <script>
         var image1 = document.getElementById(image1);
         var image2 = document.getElementById(image2);
